--- a/Develop/package.json
+++ b/Develop/package.json
@@ -2,6 +2,7 @@
   "name": "note-taker",
   "version": "1.0.0",
   "description": "",
+  "engines":"20.x",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -12,8 +13,5 @@
   "dependencies": {
     "express": "^4.18.2",
     "uuid": "^9.0.1"
-  },
-"engines": {
-  "node": "14.x"
-}
+  }
 }
