--- a/Develop/package.json
+++ b/Develop/package.json
@@ -2,7 +2,9 @@
   "name": "note-taker",
   "version": "1.0.0",
   "description": "",
-  "engines":"20.x",
+  "engines": {
+    "node": "20x"
+  },
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
