--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "node": "20x"
+    "node": "20"
   },
   "main": "server.js",
   "scripts": {
